Fix collapse css

--- a/src/styles/override.scss
+++ b/src/styles/override.scss
@@ -15,19 +15,42 @@
   padding: 0 !important;
 }
 
-.el-menu-item {
-  height: 64px;
-  line-height: 64px;
-  &.is-active {
-    border-left: 3px solid #7c4cf3 !important;
-    padding-left: 17px !important;
-    color: #323c47 !important;
-    font-weight: 500 !important;
-    background-color: #fafafa !important;
+.el-menu--main-menu, .el-menu--team-menu {
+  width: 280px;
+  .el-menu-item {
+    height: 64px;
+    line-height: 64px;
+    &.is-active {
+      border-left: 3px solid #7c4cf3 !important;
+      padding-left: 17px !important;
+      color: #323c47 !important;
+      font-weight: 500 !important;
+      background-color: #fafafa !important;
+      .el-tooltip {
+        padding: 0 17px !important;
+      }
+    }
+    &:hover {
+      background-color: #fafafa !important;
+    }
   }
-  &:hover {
-    background-color: #fafafa !important;
+}
+
+.el-menu--team-menu {
+  .el-menu-item {
+    .el-tooltip {
+      padding: 0 13px !important;
+    }
+    &.is-active {
+      .el-tooltip {
+        padding: 0 10px !important;
+      }
+    }
   }
+}
+
+.el-menu{
+  border: none !important;
 }
 
 .el-menu__avatar {
@@ -48,13 +71,13 @@
 }
 
 .el-menu__title {
-  margin: 58px 20px 20px;
+  margin: 58px 16.5px 20px 20px;
   font-size: 12px;
   i{
     float: right; font-size: 16px
   }
 }
 
-.el-menu-item:focus{
+.el-menu-item:focus {
   background-color: #00000000 !important;
 }
