--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -59,7 +59,7 @@ a{
 
 /* Background
 -------------------------- */
-$--background-color-base: #f5f7fa !default;
+$--background-color-base: #f9fafc !default;
 
 /* Border
 -------------------------- */
