--- a/src/styles/views/container.scss
+++ b/src/styles/views/container.scss
@@ -4,9 +4,29 @@
   background-color: $--color-white;
   box-shadow: 0 4px 24px 0 rgba(37, 38, 94, 0.1);
   z-index: 2;
-  .container-aside__logo {
-    margin: 40px 20px;
+}
+
+.aside-logo {
+  margin: 40px 20px;
+  &:not(.aside-logo--colapsed) {
+    .aside-logo__icon{
+      float: right;
+    }
   }
+  &.aside-logo--colapsed {
+    margin: 21px 20px;
+    text-align: center;
+    .aside-logo__icon {
+      margin: 20px 0 0;
+      display: block;
+    }
+  }
+}
+
+.aside-logo__logo {
+  z-index: 2;
+  height: 16px;
+  vertical-align: middle;
 }
 
 .container-header {
